src/objects/DOA_Approval_Mail__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DOA_Email2__c</fullName>
        <label>DOA Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOA_Email3__c</fullName>
        <label>DOA Email3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DOA_Email4__c</fullName>
        <label>DOA Email4</label>
        <type>Email</type>
    </fields>
    <label>DOA Approval Mail</label>
</CustomObject>